solution/virtual-services.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-ag-prod-http-vs
  labels:
    app: demo-ag
    cell: prod
spec:
  hosts: 
  #  - demo-ag-prod
   - "*"
  gateways:
  - demo-gateway   
  http:
    - name: primary
      route:
        - destination:
            host: demo-ag-prod
            port:
              number: 80
            subset: primary-canary
          weight: 0
        - destination:
            host: demo-ag-prod
            port:
              number: 80
            subset: primary-stable
          weight: 100
